# Trabalho3Persistencia

./: .env  .env.example  .gitignore  Equipe.txt  Mudanças para entrega.md  README.md  create_structure.py  main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py  exceptions.py
app/models/: cliente.py  pedido.py  produto.py
app/routes/: analytics_routes.py  cliente_routes.py  pedido_routes.py  produto_routes.py
app/schemas/: cliente.py  pedido.py  produto.py
app/utils/: seeder.py
