[project]
name = "trabalho3persistencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie>=1.26,<2.0",
    "email-validator>=2.3.0",
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "motor>=3.5.0,<4.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
